--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ crossorigin="anonymous">
 <script>(function(w, d,s,1,i){w[1]=w[1]|| [];w[1].push('gtm.start':new Date().getTime(), event: 'gtm.js' });var f=d. getElementsByTagName(s)[0],
 j=d.createElement(s),dl=11='dataLayer'?'&l="
 +1::.async=true;j.src=https://www.googletagmanager.com/gtm.js?id='+i+dl; f.parentNode.insertBefore(j,f):
-})(window,document, 'script', 'dataLayer'. G.Z);</script>
+})(window,document, 'script', 'dataLayer'. G-ZFDZXNBY1D);</script>
 <!-- End Google Tag Manager -->
 <table>Google analytics tutorials</table>
 
